# Finance-Analyzer

./: .gitignore  DEPLOYMENT_ROLLBACK_PLAYBOOK.md  DEPLOYMENT_VERCEL_DIGITALOCEAN.md  PHASED_EXECUTION_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  skills-lock.json  vercel.json
.github/workflows/: ci.yml
api/: index.py
data/processed/: processed_df.pkl
notebooks/: Untitled.ipynb  exploration.ipynb
src/finance_analyzer/: analyzer.py  cleaner.py  loader.py  ml.py  visualizer.py
src/finance_analyzer/api/: db_native.py  main.py
src/finance_analyzer/api/interfaces/: models.py
src/finance_analyzer/api/routes/: analysis.py  forecast.py  upload.py
tests/: test_api_health.py  test_persistent_analytics.py
